[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "papers-crawler"
version = "1.0.0"
description = "Crawl open-access PDFs and full-text JSON from Cell.com and Nature.com; retrieve paper titles and metadata from PubMed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["crawler", "papers", "cell-press", "nature", "pubmed", "open-access"]

dependencies = [
    "beautifulsoup4>=4.14",
    "playwright>=1.50",
    "playwright-stealth>=2.0",
    "requests>=2.32",
    "tqdm>=4.60",
    "tenacity>=9.0",
    "streamlit>=1.45",
    "pandas>=2.0",
    "numpy>=1.24",
    "nest-asyncio>=1.6",
]

[project.optional-dependencies]
dev = ["ipywidgets", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
