[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papers-crawler"
version = "1.0.0"
description = "Crawl open-access PDFs and full-text JSON from Cell.com and Nature.com; retrieve paper titles and metadata from PubMed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["crawler", "papers", "cell-press", "nature", "pubmed", "open-access"]

dependencies = [
    "beautifulsoup4>=4.14",
    "requests>=2.32",
    "tqdm>=4.60",
    "tenacity>=9.0",
    "streamlit>=1.45",
    "pandas>=2.0",
    "numpy>=1.24",
    "nest-asyncio>=1.6",
    "altair==5.5.0",
    "annotated-types",
    "anyio==4.12.1",
    "archspec",
    "attrs==25.4.0",
    "axial-attention==0.6.1",
    "beautifulsoup4==4.14.2",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "boltons",
    "Brotli",
    "bs4==0.0.2",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama",
    "contourpy==1.3.3",
    "cryptography",
    "cycler==0.12.1",
    "distro",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozendict",
    "fsspec==2025.12.0",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "ImageIO==2.37.2",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonpatch",
    "jsonpointer==2.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kaggle==1.7.4.5",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "markdown-it-py",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl",
    "mpmath==1.3.0",
    "narwhals==2.7.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6",
    "numpy",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas",
    "pillow==11.3.0",
    "platformdirs",
    "playwright==1.55.0",
    "playwright-stealth==2.0.0",
    "pluggy",
    "protobuf==6.32.1",
    "pycosat",
    "pycparser",
    "pydantic",
    "pydantic_core",
    "pydeck==0.9.1",
    "pyee==13.0.0",
    "Pygments",
    "PyMuPDF==1.27.1",
    "pyparsing==3.2.5",
    "PySocks",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rich",
    "rpds-py==0.27.1",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "scipy==1.16.3",
    "setuptools==78.1.1",
    "simpleitk==2.5.3",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.8",
    "streamlit==1.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tifffile==2025.10.16",
    "toml==0.10.2",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tornado==6.5.2",
    "tqdm",
    "truststore",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "win_inet_pton",
    "zstandard"
]

[project.optional-dependencies]
dev = ["ipywidgets", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
